force-app/main/default/objects/Billing_Schedule_Item__c/Billing_Schedule_Item__c.object-meta.xml
<CustomObject>
    <description>Rubx-1442 BIlling schedule Item related to billing schedule</description>
    <label>Billing Schedule Item</label>
    <nameField>
        <label>Billing Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Schedule Items</pluralLabel>
 <sharingModel>ControlledByParent</sharingModel>
</CustomObject>