force-app/main/default/objects/Billing_Schedule_Item__c/fields/Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule__c</fullName>
    <description>RUBX-1442 link records to billing schedule</description>
    <label>Billing Schedule</label>
    <referenceTo>Billing_Schedule__c</referenceTo>
    <relationshipLabel>Billing Schedule Items</relationshipLabel>
    <relationshipName>Billing_Schedule_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>