force-app/main/default/objects/Billing_Schedule_Item__c/fields/Drop_Dead_Date__c.field-meta.xml
<CustomField>
    <fullName>Drop_Dead_Date__c</fullName>
    <description>RUBX-1442 Drop dead date</description>
    <label>Drop Dead Date</label>
    <type>Date</type>
</CustomField>