force-app/main/default/objects/Billing_Schedule_Item__c/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <description>RUBX-1442 Estimated_Completion_Date</description>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>