force-app/main/default/objects/Billing_Schedule_Item__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <description>RUBX-1442 Milestone percentage</description>
    <label>Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>